grpc-redis-pub-sub-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-redis-pub-sub
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  selector:
    matchLabels:
      app: grpc-redis-pub-sub
  template:
    metadata:
      labels:
        app: grpc-redis-pub-sub
    spec:
      containers:
      - name: grpc-redis-pub-sub
        image: <image ID>
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 250m
          requests:
            cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-redis-pub-sub
  namespace: dev
  labels:
    app: grpc-redis-pub-sub
spec:
  ports:
  - port: 8080
    name: grpc-web
    protocol: TCP
  selector:
    app: grpc-redis-pub-sub
